<resources>
    <string name="app_name">QuizApp</string>
    <string name="txt_kotlin_fundamentals">Kotlin fundamental questions</string>
    <string name="txt_question_1">Question 1: How many layout managers does RecyclerView support?</string>
    <string name="txt_q1_answer1">A. 1</string>
    <string name="txt_q1_answer2">B. 2</string>
    <string name="txt_q1_answer3">C. 3</string>
    <string name="txt_q1_answer4">D. 4</string>
    <string name="txt_question_2">Question 2: What are the benefits of RecyclerView?</string>
    <string name="txt_q2_answer1">A. Fast performance</string>
    <string name="txt_q2_answer2">B. Display large data sets</string>
    <string name="txt_q2_answer3">C. Use and re-use limited number of views</string>
    <string name="txt_q2_answer4">D. Can support grid view</string>
    <string name="txt_submit">Submit</string>
    <string name="txt_reset">Reset</string>
</resources>